# Cpp3

task/task1/: CMakeLists.txt
task/task2/: task.md
week12_project/: Project.cpp  README.txt  plot_script.py
week12_project/in_out/input/: input.txt
week12_project/in_out/output/ampermeters/: output_A_1.csv
week12_project/in_out/output/voltmeters/: output_V_1.csv  output_V_2.csv
week6/: CMakeLists.txt  main.cpp
week6/include/: grid.h
week6/src/: grid_part1.cpp
